excercise101/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: excercise101-svc
spec:
  type: ClusterIP
  selector:
    app: excercise101
  ports:
    - port: 101
      protocol: TCP
      targetPort: 3030
